<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/signInEmail"
        android:layout_width="314dp"
        android:layout_height="53dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/EmailHint"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/signInPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754" />

    <Button
        android:id="@+id/Signupbutton"
        android:layout_width="231dp"
        android:layout_height="55dp"
        android:layout_marginBottom="204dp"
        android:backgroundTint="@color/white"
        android:text="@string/signUpButton"
        android:textColor="#1E2F97"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#1E2F97"
        app:strokeWidth="2px" />

    <Button
        android:id="@+id/Loginbutton"
        android:layout_width="228dp"
        android:layout_height="54dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#1E2F97"
        android:text="@string/loginButton"
        app:layout_constraintBottom_toTopOf="@+id/Signupbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/signInPassword"
        android:layout_width="312dp"
        android:layout_height="53dp"
        android:layout_marginBottom="76dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/PasswordHint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/Loginbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>