<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center">

    <TextView
        android:id="@+id/SignUpText"
        android:layout_width="361dp"
        android:layout_height="43dp"
        android:text="@string/SignUpHeader"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="72dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#1E2F97"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/FirstName"
        android:layout_width="306dp"
        android:layout_height="49dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/FName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NewAccountFName"
        android:textColor="#1E2F97"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/FirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="1.0" />


    <EditText
        android:id="@+id/LastName"
        android:layout_width="306dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirstName"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/LName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NewAccountLName"
        android:textColor="#1E2F97"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/LastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirstName"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/NewEmail"
        android:layout_width="306dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LastName"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/NEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NewEmail"
        android:textColor="#1E2F97"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/NewEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LastName"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/NewPassword"
        android:layout_width="306dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewEmail"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/NPassword1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NewPasswordHint"
        android:textColor="#1E2F97"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/NewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewEmail"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/NPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NewPassword"
        android:textColor="#1E2F97"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ConfirmNewPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewPassword"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/ConfirmNewPassword"
        android:layout_width="306dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewPassword"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/CreateAccountButton"
        android:layout_width="228dp"
        android:layout_height="54dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="#1E2F97"
        android:text="@string/NewSignUpButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmNewPassword" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu"/>


</androidx.constraintlayout.widget.ConstraintLayout>